# HoC

./: .gitignore  AGENTS.md  export_presets.cfg  icon.svg.import  openxr_action_map.tres  project.godot
.planning/: STATE.md
bridge/: Cargo.toml  README.md
bridge/src/: main.rs
bridge/src/agent/: manager.rs  mod.rs  session.rs
bridge/src/config/: mod.rs  project.rs  workspace.rs
bridge/src/git/: mod.rs  worktree.rs
bridge/src/pty/: mod.rs  process.rs
bridge/src/server/: handler.rs  mod.rs  protocol.rs  websocket.rs
components/agent_list/: agent_list_content.gd  agent_list_content.gd.uid  agent_list_content.tscn  agent_list_panel.gd  agent_list_panel.gd.uid
components/project_switcher/: project_switcher_content.gd  project_switcher_content.gd.uid  project_switcher_content.tscn  project_switcher_panel.gd  project_switcher_panel.gd.uid
docs/: quest_export_guide.md
scenes/: environment.tscn  infinite_grid.tscn  main.tscn
scripts/: agent_orchestrator.gd  agent_orchestrator.gd.uid  bridge_client.gd  bridge_client.gd.uid  bridge_launcher.gd  bridge_launcher.gd.uid  input_router.gd  input_router.gd.uid  layout_manager.gd  layout_manager.gd.uid  main_scene.gd  main_scene.gd.uid  output_buffer.gd  output_buffer.gd.uid  panel_registry.gd  panel_registry.gd.uid  performance_manager.gd  performance_manager.gd.uid  project_config.gd  project_config.gd.uid  utils.gd
shaders/: infinite_grid.gdshader  infinite_grid.gdshader.uid  infinite_grid.tres  sci_fi_skybox.gdshader  sci_fi_skybox.gdshader.uid  sci_fi_skybox.tres
tasks/: prd-compliance-sweep-10.md
(+38 files in other folders)
