[package]
name = "hoc-bridge"
version = "0.1.0"
edition = "2021"
description = "WebSocket bridge server for Halls of Creation VR agent orchestration"
license = "MIT"
authors = ["Halls of Creation Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY handling
portable-pty = "0.8"

# Git operations
git2 = "0.19"

# Config parsing
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Futures utilities
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
